Added the possibility to see the article's destinations data for each article API.
